services/ui-src/src/index.scss
/* ... */
#packageActionsColHeader {
  width: 70px;
}

.alert-bar:not(:empty) {
  padding-top: 2rem;
  padding-left: 14rem;
  padding-right: 14rem;
  padding-bottom: 2rem;
}
.alert-bar button {
  position: absolute;
  background: inherit;
  top: 26px;
  right: 26px;
  border: none;
}
.alert-bar path {
  fill: black;
}
.required-mark {
  color: red;
}
form label.required:after {
  color: red;
  content: "*";
}
select.form-control,
textarea.form-control,
input.form-control {
  font-size: 2rem;
}

input[type="file"] {
  width: 100%;
}

.ds-c-review:not(.original-review-component) {
  .ds-c-review__body {
    @extend .ds-u-margin-top--1;
    font-size: 2rem;
    color: $color-gray;
  }
}

.profile-container {
  @extend .app-bar;
  @extend .ds-u-display--flex;
  @extend .ds-u-flex-direction--column;
  @extend .ds-u-align-items--center;
  @extend .ds-u-padding-bottom--5;

  h2 {
    @extend .ds-u-margin-top--7;
    @extend .ds-u-margin-bottom--3;
  }
  .ds-c-review {
    @extend .ds-u-border-bottom--0;
    @extend .ds-u-margin-top--3;
    padding: 0 !important;

    > div {
      flex: 1;
    }
  }
  .ds-c-review__heading {
    @extend .ds-u-font-weight--semibold;
  }

  .profile-content {
    @extend .ds-l-row;
    @include max-width-ultra-wide;
    width: 100%;

    .left-column,
    .right-column {
      @extend .ds-l-col--12;
      @extend .ds-l-lg-col--6;
    }
  }

  .disclaimer-message {
    @extend .ds-l-col--12;
    @extend .ds-text-body--md;
    @extend .ds-u-measure--wide;
    @extend .ds-u-font-style--italic;
    color: $color-gray;

    a {
      white-space: nowrap;
    }
  }

  .add-state-button {
    @extend .ds-c-button;
    border-style: none;
  }

  .add-access-container {
    @extend .ds-u-display--flex;
    @extend .ds-u-justify-content--center;
    padding: 12px 0 12px 0;
  }
}

.phone-number-edit-form {
  label {
    @extend .ds-u-font-weight--semibold;
    margin-bottom: 1.6rem;
  }

  input {
    border-color: $color-gray-light;
    margin-bottom: 1.6rem;
    width: fit-content;
    min-width: 13.4rem;
  }

  .phone-apply-button {
    margin-right: 1rem;
  }
}

.phone-number-empty-form {
  label {
    @extend .ds-u-font-weight--semibold;
    margin-bottom: 1.6rem;
  }
}

.phone-number-view-form {
  label {
    @extend .ds-u-font-weight--semibold;
    margin-bottom: 0.8rem;
  }

  .phone-edit-button {
    border: none;
  }

  .phone-text {
    font-size: 2rem;
    color: $color-gray;
    margin-right: 1rem;
  }
}

.form-container {
  @extend .app-bar;
  @extend .ds-u-padding-top--5;
  // @extend .ds-u-margin-right--7;
  @extend .ds-u-display--flex;
  @extend .ds-u-flex-direction--column;
  @extend .ds-u-justify-content--center;
  @extend .ds-l-col--auto;
  @extend .ds-u-align-items--center;

  h2 {
    @extend .ds-h3;
    @extend .ds-u-margin-top--7;
  }
  .topic-title {
    @extend .ds-h3;
    @extend .ds-u-margin-top--0;
    margin-bottom: 24px;
  }
  .ds-c-review {
    @extend .ds-u-border-bottom--0;
  }
  .ds-c-review__heading {
    @extend .ds-u-margin-top--1;
    @extend .ds-u-font-weight--semibold;
  }

  form,
  .faq-card,
  .component-detail-wrapper,
  .form-subheader-message {
    @include max-width-ultra-wide;
    width: 100%;
  }

  .component-detail-wrapper {
    @extend .ds-u-display--flex;
    @extend .ds-u-align-items--start;

    .ds-c-vertical-nav {
      @extend .ds-u-margin-right--2;
      flex-basis: 275px;
      position: sticky;
      top: 24px;
    }

    .component-detail {
      flex: 1 1;
    }
  }

  .form-subheader-message {
    padding-top: 40px;

    > p {
      @extend .ds-u-measure--wide;
    }
  }

  .form-card {
    @extend .ds-u-padding-top--1;
    @extend .ds-u-padding-bottom--3;

    label {
      @extend .ds-u-margin-top--3;
    }
  }
  .label-container {
    @extend .ds-l-row;
    max-width: 460px;
    width: 100%;
    margin-left: 0px;
    @extend .ds-u-align-items--end;

    .label-rcol {
      @extend .ds-u-margin-left--auto;
      text-align: right;
      font-weight: 400;
    }
  }
  .faq-container {
    background-color: $color-primary-alt-lightest;
    @extend .ds-u-margin-bottom--7;
    @extend .ds-u-margin-top--4;
    padding: 0 101px;
    @extend .ds-u-padding-y--5;
    @extend .ds-u-display--flex;
    @extend .ds-u-justify-content--between;
    @extend .ds-u-flex-wrap--wrap;
    @include max-width-ultra-wide;
    width: 100%;

    span {
      font-size: 24px;

      @media only screen and (max-width: $width-lg) {
        font-size: 21px;
      }
    }
  }
  .req-message {
    max-width: 650px;
  }
}

.submissions-table-mini-dash {
  @include custom-table;
  width: 100%;
  color: #5b616b;
  font-family: Open Sans;
  font-style: normal;
  font-size: 14px;
  line-height: 20px;

  th,
  td {
    white-space: nowrap;

    &:not(:last-child) {
      padding-right: 2ch;
    }
  }
}

article.form-container {
  @extend .ds-u-margin-bottom--7;
  @extend .ds-u-align-items--center;

  .read-only-submission {
    @include max-width-ultra-wide;
    width: 100%;

    section .ds-c-review {
      @extend .ds-u-measure--wide;
    }

    // i hate this hacky, redundant selector, but such is life
    > section + section,
    .choice-container {
      @extend .ds-u-margin-top--7;
    }

    h2:not(.ds-c-review__heading) {
      @extend .ds-u-margin-bottom--0;
    }

    h2.ds-c-review__heading {
      @extend .ds-h2;
      @extend .ds-u-font-weight--bold;
      @extend .ds-u-margin-bottom--3;
    }
  }
}

.summary-field {
  height: 300px;
  font-size: 2rem;
  width: 100%;
  max-width: 100%;
  resize: none;
  border-color: $color-gray-light;
}

.upload-card {
  @extend .ds-u-margin-top--4;
}

.loading-screen {
  display: flex;
  justify-content: center;
  padding-top: 40px;
  @extend .ds-u-color--primary;
  .ds-c-spinner::before,
  .ds-c-spinner::after {
    border-width: 8px;
    height: 70px;
    width: 70px;
  }
  width: 100%;
  height: 40rem;
}

.loading-screen-hidden {
  display: none;
}
/* ... */

